[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/ship.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.5, 47.5 )

[node name="Ship" type="Area2D"]
position = Vector2( 523, 347 )
collision_mask = 12
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -45, -16, 8, -43, 47, -15, 39, 16, 39, 42, 47, 17, 8 )

[node name="ShipSize" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 2 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Ship_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
